// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fileDepMap() exportAllFrom.js 1`] = `
Map {
  "./exportNamed" => Map {
    "*" => Array [
      Object {
        "name": "*",
        "source": "exports/exportAllFrom.js",
      },
    ],
  },
}
`;

exports[`fileDepMap() exportDefault.js 1`] = `
Map {
  "./exportNamed" => Map {
    "a" => Array [
      Object {
        "name": "default",
        "source": "exports/exportDefault.js",
      },
    ],
  },
}
`;

exports[`fileDepMap() exportNamed.js 1`] = `
Map {
  "fs" => Map {
    "default" => Array [
      Object {
        "name": "readFile",
        "source": "exports/exportNamed.js",
      },
    ],
  },
}
`;

exports[`fileDepMap() exportNamedFrom.js 1`] = `
Map {
  "./exportNamed" => Map {
    "a" => Array [
      Object {
        "name": "a",
        "source": "exports/exportNamedFrom.js",
      },
    ],
  },
}
`;

exports[`fileDepMap() noExports.js 1`] = `Map {}`;
